--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id "edu.wpi.first.GradleRIO" version "2020.2.2"
 }
 
+repositories {
+    mavenCentral()
+}
+
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
@@ -57,6 +61,10 @@ dependencies {
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
+
+    // Add lombok because I'm lazy
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+    annotationProcessor 'org.projectlombok:lombok:1.18.10'
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
